--- a/about.html
+++ b/about.html
@@ -255,7 +255,7 @@
                                     <a href="#" class="image left"><img src="images/comittee/Mega.jpg" alt="" /></a>
                                     <div class="inner">
                                         <h3>Finlay</h3>
-                                        <p> </p>
+                                        <p> Through the prism of Minewater Geothermal energy, the research aims to illicit greater understanding on the justice elements of energy resource development in the context of net zero, deindustrialisation and intergenerational socioeconomic disadvantage. By informing the design and delivery of minewater geothermal business models and policy landscape, this research will support resilient, sustainable development pathways for post-industrial communities, contributing to a place-based and just energy transition.</p>
 					    
 					<p>Host Institution: University of Strathclyde</p>
                                     </div>
