--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                                             <header>
                                                 <h2>European Geothermal PhD Days</h2>
                                                 
-                                                <p>The 14th edition of the European Geothermal PhD Days <a href="about.html">(EGPD)</a> will take place in Glasgow from the 4th to the 6th of April, 2023. This year, the event is organised by the PhD students of the University of Glasgow, the University of Strathclyde and the University of Edinburgh.
+                                                <p>The 14th annual European Geothermal PhD Days <a href="about.html">(EGPD)</a> will come to the UK for the first time and will be hosted in the City of Glasgow from the 4th to 6th of April, 2023. This year, the event is organised by a team from the University of Glasgow, the University of Strathclyde and the University of Edinburgh.
                                                </p>
                                             </header>
                                             
