--- a/travelandaccomodation.html
+++ b/travelandaccomodation.html
@@ -127,7 +127,7 @@
             <section class="wrapper style2">
                 <div class="container">
                     <header class="major">
-                        <img src="images/EGPD2023Logo_White.png" alt="egpd" width="300">
+                        <img src="images/EGPD2023Logo_White.jpg" alt="egpd" width="300">
                         <h4>  </h4>
                     </header>
                 </div>
