--- a/oursponsors.html
+++ b/oursponsors.html
@@ -47,7 +47,7 @@
                 <div class="container">
                     <header class="major">
                         <h2>Sponsors</h2>
-                        <p>We are grateful for the support of our sponsors, who will make this event possible and free for all european PhD students.</p>
+                        <p>We are grateful for the support of our sponsors, who will make this event possible and free for all European PhD students.</p>
                     </header>
                 </div>
             
