--- a/about.html
+++ b/about.html
@@ -270,6 +270,16 @@
                         </div>
                     </div>
                 </section>
+			
+			
+		 <section class="wrapper style2">
+                    <div class="container">
+                        <header class="major">
+                            <img src="images/egpd.png" alt="egpd-logo" width="300">
+                            <h4>     </h4>
+                        </header>
+                    </div>
+                </section>
                 
 			<!-- Footer -->
 				<div id="footer">
