--- a/about.html
+++ b/about.html
@@ -160,7 +160,7 @@
                             			
 			<h2> About the hosts </h2>
 
-                   	<p> PhD students from the University of Strathclyde, the University of Glasgow and the University of Edinburgh, we are delighted to host the 14th edition of the EGPD.  </p>
+                   	<h3> PhD students from the University of Strathclyde, the University of Glasgow and the University of Edinburgh, we are delighted to host the 14th edition of the EGPD.  </h3>
                             <p>   </p>
 				
                         </header>
