--- a/about.html
+++ b/about.html
@@ -21,8 +21,7 @@
 					
 
                     <!-- Logo -->
-                        <h1><a href="index.html" id="logo">European Geothermal PhD Days <em> 4 - 6
-                            April 2023</em></a></h1>
+                        <h1><a href="index.html" id="logo">European Geothermal PhD Days <em> 4 - 6 April 2023 </em></a></h1>
 			
 					
                     <!-- Nav -->
