--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
         <link rel="stylesheet" href="assets/css/main.css" />
-    <link rel="shortcut icon" href="images/Glasgow_Briggs.ico"/>
+    <link rel="shortcut icon" href="images/EGPD2023Logo_White.ico"/>
 	    
     </head>
 	<body class="is-preload">
