--- a/about.html
+++ b/about.html
@@ -45,7 +45,8 @@
 
 			
 			<!-- Banner -->
-				<section id="banner2">
+				<section id="banner">
+					<a href="#" class="background-image"><background-image="images/Glasgow_Briggs.jpg" alt="" /></a>
 					<header>
 						<h2>The schedule of the #EGPD2023 Glasgow will come soon</em></h2>
 						<a href="schedule.html" class="button">EGPD's Schedule</a>
