--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
 			
 			<!-- Banner -->
 				<section id="banner">
-					<a href="#" class="background-image"><background-image="images/Glasgow_Briggs.jpg" alt="" /></a>
+					<a href="#" class="background-image"><background-image="images/egpd.png" alt="" /></a>
 					<header>
 						<h2>The schedule of the #EGPD2023 Glasgow will come soon</em></h2>
 						<a href="schedule.html" class="button">EGPD's Schedule</a>
