--- a/about.html
+++ b/about.html
@@ -45,8 +45,8 @@
 
 			
 			<!-- Banner -->
-				<section id="banner">
-					<a href="#" class="background-image"><background-image="images/egpd.png" alt="" /></a>
+				<section id="banner", background-image="images/egpd.png">
+					
 					<header>
 						<h2>The schedule of the #EGPD2023 Glasgow will come soon</em></h2>
 						<a href="schedule.html" class="button">EGPD's Schedule</a>
