--- a/about.html
+++ b/about.html
@@ -52,6 +52,7 @@
 						<h2>The schedule of the #EGPD2023 Glasgow will come soon</em></h2>
 						<a href="schedule.html" class="button">EGPD's Schedule</a>
 					</header>
+					</div>
 				</section>
 			
 			<!-- Main -->
