--- a/schedule.html
+++ b/schedule.html
@@ -110,6 +110,15 @@
                         </header>
                     </div>
                 </section>
+			
+			
+			<!-- Banner -->
+				<section id="banner">
+					<header>
+						<h2>The schedule of the #EGPD2023 Glasgow will come soon</em></h2>
+						<a href="schedule.html" class="button">EGPD's Schedule</a>
+					</header>
+				</section>
 		   
 
 			<!-- Footer -->
