--- a/sponsor.html
+++ b/sponsor.html
@@ -98,6 +98,14 @@
 					</div>
 				</section>
                 
+
+		<!-- Banner -->
+				<section id="banner">
+					<header>
+						<a href="mailto: egpd2023@gmail.com?subject=EGPD Sponsorship" class="button">Contact Us</a>
+					</header>
+				</section>		
+		
 			<!-- Footer -->
 				<div id="footer">
 					<div class="container">
