--- a/sponsor.html
+++ b/sponsor.html
@@ -100,7 +100,7 @@
                 
 
 		<!-- Banner -->
-				<section id="banner">
+				<section id="banner2">
 					<header>
 						<a href="mailto: egpd2023@gmail.com?subject=EGPD Sponsorship" class="button">Contact Us</a>
 					</header>
