--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
                         <nav id="nav">
                             <ul>
                                 <li><a href="index.html">Home</a></li>
-                                <li class="current">><a href="about.html">About</a></li>
+                                <li class="current"><a href="about.html">About</a></li>
                                 <li><a href="attend.html">Abstract Submission</a></li>
                                 <li><a href="schedule.html">Schedule</a></li>
                                 <li><a href="oursponsors.html">Sponsors</a>
