--- a/schedule.html
+++ b/schedule.html
@@ -39,6 +39,12 @@
                         </nav>
 
 				</div>
+			
+			<!-- Banner -->
+				<section id="banner2"> 
+					
+				</section>
+			
 
 			<!-- Main -->
             <section class="wrapper style1">
