--- a/attend.html
+++ b/attend.html
@@ -107,11 +107,11 @@
 
                                 <section>
                                     <h3>Submissions are NOT open yet </h3>
-                                    <p> Submit your abstract before the 13th January 2023. </p>
+                                    <!--p> Submit your abstract before the 13th January 2023. </p-->
                                     <footer>
-                                        <a href="https://docs.google.com/forms/d/e/1FAIpQLSdflROcU2J3kTstpxzEkYcYxCr8vfR3Kv_aDD778Q-1WAEH5w/viewform?usp=sf_link" class="button">Abstract Submission</a>
+                                        <!--a href="https://docs.google.com/forms/d/e/1FAIpQLSdflROcU2J3kTstpxzEkYcYxCr8vfR3Kv_aDD778Q-1WAEH5w/viewform?usp=sf_link" class="button">Abstract Submission</a-->
 				        
-					    </p>
+					    </p-->
 					    
 				        <a href="mailto: egpd2023@gmail.com?subject=EGPD 2023 Query" class="button">Contact Us</a>
                                     </footer>
