--- a/about.html
+++ b/about.html
@@ -27,6 +27,8 @@
                     <!-- Nav -->
                         <nav id="nav">
                             <ul>
+				<li> <a href="index.html" id="logo">European Geothermal PhD Days </a>
+					<a><em> 4 - 6 April 2023 </em></a>  </li>  
                                 <li><a href="index.html">Home</a></li>
                                 <li class="current"><a href="about.html">About</a></li>
                                 <li><a href="attend.html">Abstract Submission</a></li>
