--- a/about.html
+++ b/about.html
@@ -27,8 +27,7 @@
                     <!-- Nav -->
                         <nav id="nav">
                             <ul>
-				<li> <a href="index.html" id="logo">European Geothermal PhD Days </a>
-					<a><em> 4 - 6 April 2023 </em></a>  </li>  
+				<li><img src="images/egpd.png" alt="egpd-logo" width="300">  </li>  
                                 <li><a href="index.html">Home</a></li>
                                 <li class="current"><a href="about.html">About</a></li>
                                 <li><a href="attend.html">Abstract Submission</a></li>
