--- a/about.html
+++ b/about.html
@@ -17,17 +17,17 @@
 		<div id="page-wrapper">
 
 			<!-- Header -->
-				<div id="header">
+				<!--div id="header"-->
 					
 
                     <!-- Logo -->
-                        <h1><a href="index.html" id="logo">European Geothermal PhD Days <em> 4 - 6 April 2023 </em></a></h1>
+                        <!--h1><a href="index.html" id="logo">European Geothermal PhD Days <em> 4 - 6 April 2023 </em></a></h1-->
 			
 					
                     <!-- Nav -->
                         <nav id="nav">
                             <ul>
-				<li><img src="images/egpd.png" alt="egpd-logo" width="300">  </li>  
+				<li><a href="index.html" <img src="images/egpd.png" alt="egpd-logo" width="300"> </a> </li>  
                                 <li><a href="index.html">Home</a></li>
                                 <li class="current"><a href="about.html">About</a></li>
                                 <li><a href="attend.html">Abstract Submission</a></li>
@@ -42,7 +42,7 @@
                             </ul>
                         </nav>
 
-				</div>
+				<!--/div-->
 
 			
 			<!-- Banner -->
