--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
                     <!-- Nav -->
                         <nav id="nav">
                             <ul>
-				<li><a href="index.html" <img src="images/egpd.png" alt="egpd-logo" width="250"> </a> </li>  
+				<li><img href="index.html"　src="images/egpd.png" alt="egpd-logo" width="250"></li>  
                                 <li><a href="index.html">Home</a></li>
                                 <li class="current"><a href="about.html">About</a></li>
                                 <li><a href="attend.html">Abstract Submission</a></li>
