--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
                                     </ul>
                                 </li>
                                 <li><a href="travelandaccomodation.html">Travel & Accomodation</a></li>
-				    <li> ＜a href="index.html"><img　src="images/egpd.png" alt="egpd-logo" width="250"></a></li>  
+				 <li> <img　src="images/egpd.png" alt="egpd-logo" width="250"></li>  
                             </ul>
                         </nav>
 
