--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
                                     </ul>
                                 </li>
                                 <li><a href="travelandaccomodation.html">Travel & Accomodation</a></li>
-				  <li><a href="index.html" id="logo">European Geothermal PhD Days <em> 4 - 6 April 2023 </em></a></li>
+				  <li><a European Geothermal PhD Days <em> 4 - 6 April 2023 </em></a></li>
 				 
                             </ul>
                         </nav>
