--- a/about.html
+++ b/about.html
@@ -25,8 +25,8 @@
 					<!-- Nav -->
 						<nav id="nav">
 							<ul>
-								<li class="current"><a href="index.html">Home</a></li>
-								<li><a href="about.html">About</a></li>
+								<li><a href="index.html">Home</a></li>
+								<li class="current"><a href="about.html">About</a></li>
 								<li><a href="attend.html">Abstract Submission</a></li>
 								<li><a href="schedule.html">Schedule</a></li>
                                 <li><a href="oursponsors.html">Sponsors</a>
