--- a/about.html
+++ b/about.html
@@ -42,10 +42,10 @@
 				</div>
 
 			<!-- Banner -->
-				<section id="banner">
+				<section id="banner2">
 					<header>
-						<h2>The schedule of the #EGPD2023 Glasgow will come soon</em></h2>
-						<a href="schedule.html" class="button">EGPD's Schedule</a>
+						<h2>Find out more about the city of Glasgow! </em></h2>
+						<a href="https://peoplemakeglasgow.com/good-to-know" class="button">#PeopleMakeGlasgow</a>
 					</header>
 				</section>
 			
