--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
 				<section id="banner2">
 					<header>
 						<h2>Find out more about the city of Glasgow! </em></h2>
-						<a href="https://peoplemakeglasgow.com/good-to-know" class="button">#PeopleMakeGlasgow</a>
+						<a href="https://peoplemakeglasgow.com/" class="button">#PeopleMakeGlasgow</a>
 					</header>
 				</section>
 			
