--- a/schedule.html
+++ b/schedule.html
@@ -68,7 +68,7 @@
                                         <h2>Site visit</h2>
                                      <h3> The UKGEOS Glasgow Observatory</h3>
 					    
-					    <span class="image featured"><img src="images/UKGEOS.jpg" alt="" /></span>
+					   <!--  <span class="image featured"><img src="images/UKGEOS.jpg" alt="" /></span>-->
 					    
 					    <figure class="video_container">
 					    <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/vkvlG3ZaohI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
