--- a/schedule.html
+++ b/schedule.html
@@ -57,7 +57,7 @@
                                 <article>
                                     <header>
                                         <h2>EGPD Schedule is coming soon</h2>
-                                         <h3>The general schedule for oral and poster presentations will appear here soon.</h3>
+                                         <span class="image featured"><img src="images/Provisional Itinerary.PNG" alt="" /></span>
 					 <h3> A more detailed schedule of the presentations will be given closer to the conference date.</h3>
                                     </header>
 
