--- a/schedule.html
+++ b/schedule.html
@@ -58,7 +58,7 @@
                                     <header>
                                         <h2>EGPD Schedule is coming soon</h2>
                                          <span class="image featured"><img src="images/Provisional Itinerary.PNG" alt="" /></span>
-					 <h3> A more detailed schedule of the presentations will be given closer to the conference date.</h3>
+					 <h3> Below is a proivisional itinerary for the event. A more detailed schedule of the presentations will be given closer to the conference date.</h3>
                                     </header>
 
                                    <!-- <span class="image featured"><img src="images/egpd_schedule.png" alt="" /></span>
