--- a/schedule.html
+++ b/schedule.html
@@ -56,9 +56,10 @@
                                 <!-- Content -->
                                 <article>
                                     <header>
-                                        <h2>EGPD Schedule is coming soon</h2>
-                                         <span class="image featured"><img src="images/Provisional Itinerary.PNG" alt="" /></span>
+                                        <h2>EGPD 2023 Schedule </h2>
 					 <h3> Below is a proivisional itinerary for the event. A more detailed schedule of the presentations will be given closer to the conference date.</h3>
+                                         <span class="image featured"><img src="images/Provisional Itinerary.PNG" alt="" /></span>
+					
                                     </header>
 
                                    <!-- <span class="image featured"><img src="images/egpd_schedule.png" alt="" /></span>
