--- a/schedule.html
+++ b/schedule.html
@@ -104,6 +104,8 @@
                                 <section>
                                     <h3>Highlights of the event </h3>
                                     <p>The Keynote speakers and talk titles will appear here soon. </p>
+					
+				<span class="image featured"><img src="images/Glasgow_Marikar.jpg" alt="" /></span>
                                     
                                 </section>
 
