--- a/schedule.html
+++ b/schedule.html
@@ -105,7 +105,7 @@
                                     <h3>Highlights of the event </h3>
                                     <p>The Keynote speakers and talk titles will appear here soon. </p>
 					
-				<span class="image featured"><img src="images/Glasgow_Marikar.jpg" alt="" /></span>
+				<span class="image featured"><img src="images/CityChambers.jpg" alt="" /></span>
                                     
                                 </section>
 
