--- a/schedule.html
+++ b/schedule.html
@@ -104,7 +104,7 @@
                                 <section>
                                     <h3>Highlights of the event </h3>
                                     <p>The Keynote speakers and talk titles will appear here soon. </p>
-					
+					<h3>Civic Hospitality at the City Chambers </h3>
 				<span class="image featured"><img src="images/CityChambers.jpg" alt="" /></span>
                                     
                                 </section>
