--- a/schedule.html
+++ b/schedule.html
@@ -57,7 +57,7 @@
                                 <article>
                                     <header>
                                         <h2>EGPD 2023 Schedule </h2>
-					 <h3> Below is a proivisional itinerary for the event. A more detailed schedule of the presentations will be given closer to the conference date.</h3>
+					 <h3> Below is a provisional itinerary for the event. A more detailed schedule of the presentations will be given closer to the conference date.</h3>
                                          <span class="image featured"><img src="images/Provisional Itinerary.PNG" alt="" /></span>
 					
                                     </header>
