--- a/sponsor.html
+++ b/sponsor.html
@@ -113,7 +113,14 @@
 							
 						</div>
 					</div>
-
+		<section class="wrapper style2">
+                    <div class="container">
+                        <header class="major">
+                            <img src="images/egpd.png" alt="egpd-logo" width="300">
+                            <h4>     </h4>
+                        </header>
+                    </div>
+                </section>
                     <!-- Icons -->
                         <ul class="icons">
                             <li><a href="https://twitter.com/egpd_2023" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
