--- a/schedule.html
+++ b/schedule.html
@@ -76,7 +76,7 @@
 					   <!--  <span class="image featured"><img src="images/UKGEOS.jpg" alt="" /></span>-->
 					    
 					    <figure class="video_container">
-					    <iframe src="https://www.youtube-nocookie.com/embed/vkvlG3ZaohI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					    <iframe width="80%" src="https://www.youtube-nocookie.com/embed/vkvlG3ZaohI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 					    </figure>
 						    
 					  <div class="numbredContent minHeight">More information on the Glasgow GeoEnergy Observatory <a href=" https://www.ukgeos.ac.uk/glasgow-observatory ">here</a> and the <a href=" https://www.thinkgeoenergy.com/glasgow-uk-observatory-offers-opportunities-for-groundbreaking-geothermal-research/?utm_source=ThinkGeoEnergy+List&utm_campaign=276268dc38-TGE_Newsletter_RSS1&utm_medium=email&utm_term=0_657e42f767-276268dc38-415275717">latest news</a>. </div>  
