--- a/index.html
+++ b/index.html
@@ -115,6 +115,10 @@
                                         <footer>
                                             <a href="sponsor.html" class="button">Sponsor Oportunities</a>
                                         </footer>
+					    
+					     <span class="image featured"><img src="images/glasgow_logo.jpg" alt="" /></span>
+					     <span class="image featured"><img src="images/strathclyde.jpg" alt="" /></span>
+					     <span class="image featured"><img src="images/Edinburgh.jpg" alt="" /></span>
                                     </section>
                                 </div>
                             </div>
