--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                                             <a href="sponsor.html" class="button">Sponsor Oportunities</a>
                                         </footer>
 					    
-					     <span class="image featured"><img src="images/glasgow_logo.jpg" alt="" /></span>
+					     <span class="image featured"><img src="images/glasgow_logo.png" alt="" /></span>
 					     <span class="image featured"><img src="images/strathclyde.jpg" alt="" /></span>
 					     <span class="image featured"><img src="images/Edinburgh.jpg" alt="" /></span>
                                     </section>
