--- a/sponsor.html
+++ b/sponsor.html
@@ -51,7 +51,7 @@
 
 										<section>
                                             <h3>Sponsor opportunity</h3>
-                                            <p>Would you like the logo of your company here?</p>
+                                            <p>Please get in touch if you are interested in sponsoring EGPD 2023!</p>
 											<footer>
 												<a href="mailto: egpd2023@gmail.com?subject=Sponsor_Inquiry" class="button">Sponsor</a>
 											</footer>
