--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                                         <footer>
                                             <a href="sponsor.html" class="button">Sponsor Oportunities</a>
                                         </footer>
-					    
+					    <h3>Organising Universities</h3>
 					     <span class="image featured"><img src="images/glasgow_logo.png" alt="" /></span>
 					     <span class="image featured"><img src="images/strathclyde.jpg" alt="" /></span>
 					     <span class="image featured"><img src="images/Edinburgh.jpg" alt="" /></span>
