--- a/travelandaccomodation.html
+++ b/travelandaccomodation.html
@@ -59,7 +59,7 @@
                                         </header>
                                             
                                         <p>
-                                      		Only 40 min away from the capital <a href="https://edinburgh.org/">Edinburgh </a>, a city full of history, whiskey shops and hills to climb, Glagow is a beautiful, dynamic and cultural <a href="https://glasgowtourismandvisitorplan.com/"> not-to-be-missed city </a>. 
+                                      		Only 40 min away from the capital <a href="https://edinburgh.org/">Edinburgh </a>, a city full of history, whiskey shops and hills to climb, Glasgow is a beautiful, dynamic and cultural <a href="https://glasgowtourismandvisitorplan.com/"> not-to-be-missed city </a>. 
 						You can here find more information on <a href="https://glasgowconventionbureau.com/plan-your-meeting/meeting-planners-toolkit/travel-accommodation/"> travel and accomodation </a>, including <a href="https://peoplemakeglasgow.com/good-to-know/getting-here"> how to get there </a>. 
 						If you land in Edinburgh, the Citylink AIR Glasgow Service 900 bus will take you directly from the airport to Glasgow’s Buchanan Bus Station which takes around 1 hour. From Edinburgh Waverley station in the city center, trains running every 30 minutes will take you to Glagow Central Station or Queen Street. 
 						The <a href="https://glasgowconventionbureau.com/plan-your-meeting/meeting-planners-toolkit/glasgow-tourist-information/">Glasgow Convention Bureau </a> tells you everything you need to know about how to plan your visit and the activities  Glasgow offers, 
