--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                                         
                                         
                                         <h3>Submissions are NOT open yet </h3>
-                                        <p> Submit your abstract before the 13th January 2023.  Attendance is free of charge!</p>
+                                        <p> Attendance is free of charge!</p>
                                         <footer>
                                             <a href="attend.html" class="button">Abstract Submission Guidelines</a>
                                         </footer>
