--- a/attend.html
+++ b/attend.html
@@ -111,7 +111,7 @@
 
                                 <section>
                                     
-                                    <p> Submit your abstract before the 5th February 2023. <p>
+                                    <h3> Submit your abstract before the 5th February 2023. </h3>
                                     <footer>
                                         <a href="https://docs.google.com/forms/d/e/1FAIpQLSdflROcU2J3kTstpxzEkYcYxCr8vfR3Kv_aDD778Q-1WAEH5w/viewform?usp=sf_link" class="button">Abstract Submission</a>
 				        
