--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                                     <section>
                                         
                                         
-                                        <h3>Submissions are NOT open yet </h3>
+                                        <h3>Submissions are OPEN </h3>
                                         <p> Attendance is free of charge!</p>
                                         <footer>
                                             <a href="attend.html" class="button">Abstract Submission Guidelines</a>
