--- a/about.html
+++ b/about.html
@@ -105,7 +105,7 @@
                                 <!-- Sidebar -->
 
                                 <section>
-                                    <h3>Submissions are NOT open yet </h3>
+                                    <h3>Submissions are OPEN </h3>
                                    
                                     <footer>
                                         <a href="attend.html" class="button">Abstract Submission Guidelines</a>
