--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
                                         
                                         
                                         <h3>Submissions are OPEN </h3>
+					<h3> Submit your abstract before the 5th February 2023. </h3>
                                         <p> Attendance is free of charge!</p>
                                         <footer>
                                             <a href="attend.html" class="button">Abstract Submission Guidelines</a>
