--- a/about.html
+++ b/about.html
@@ -106,6 +106,7 @@
 
                                 <section>
                                     <h3>Submissions are OPEN </h3>
+					<h3> Submit your abstract before the 5th February 2023. </h3>
                                    
                                     <footer>
                                         <a href="attend.html" class="button">Abstract Submission Guidelines</a>
