--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-        <link rel="shortcut icon" href="images/volcano.ico"/>
+        <link rel="shortcut icon" href="images/EGPD2023Logo_White.ico"/>
 	</head>
 	<body class="is-preload">
 		<div id="page-wrapper">
@@ -104,9 +104,9 @@
                                     <section>
                                         
                                         
-                                        <h3>Submissions are OPEN </h3>
+                                        <h3>SUBMISSIONS ARE NOW OPEN ! </h3>
 					<h3> Submit your abstract before the 5th February 2023. </h3>
-                                        <p> Attendance is free of charge!</p>
+                                        <p> Attendance is free of charge</p>
                                         <footer>
                                             <a href="attend.html" class="button">Abstract Submission Guidelines</a>
                                         </footer>
