--- a/about.html
+++ b/about.html
@@ -105,7 +105,7 @@
                                 <!-- Sidebar -->
 
                                 <section>
-                                    <h3>Submissions are OPEN </h3>
+                                    <h3>SUBMISSIONS ARE NOW OPEN ! </h3>
 					<h3> Submit your abstract before the 5th February 2023. </h3>
                                    
                                     <footer>
