--- a/attend.html
+++ b/attend.html
@@ -98,6 +98,7 @@
 				     <h3>8. Shallow Geothermal </h3>
                                      <h3>9. Surface and Monitoring Technology </h3>
                                      <h3>10. Thermal Energy Storage </h3>
+				    <h3>11. Socio-technical Transitions </h3>
                                         <summary>Any other topics related to geothermal, not mentioned in our list, are welcome and will be fit in the program where it makes the most sense.</summary>
                                     </article>
 
