--- a/oursponsors.html
+++ b/oursponsors.html
@@ -63,14 +63,14 @@
 				<section class="col-4 col-12-narrower">
 				  <div class="inner">
                   	      <h2>Supporters</h2>
-				<img src="images/Coat_of_arms_Glasgow.jpg" alt="egpd-logo" >
+				<img src="images/Coat_of_arms_Glasgow.jpg" alt="egpd-logo" width="150">
 				</div>
                             </section>    
 				
 				<section class="col-4 col-12-narrower">
 				  <div class="inner">
                   	      <h2>Supporters</h2>
-				<img src="images/British_Geological_Survey.png" alt="egpd-logo" >
+				<img src="images/British_Geological_Survey.png" alt="egpd-logo" width="250">
 				</div>
                             </section>
 				
